--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vuelidate/validators": "^2.0.4",
     "date-fns": "^3.6.0",
     "nuxt": "^3.12.4",
+    "nuxt-swiper": "^1.2.2",
     "vue": "latest"
   },
   "overrides": {
