--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@pinia/nuxt": "^0.5.4",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
+    "@vueuse/motion": "^2.2.3",
     "date-fns": "^3.6.0",
     "nuxt": "^3.12.4",
     "nuxt-swiper": "^1.2.2",
