--- a/package.json
+++ b/package.json
@@ -10,15 +10,24 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@iconify-json/material-symbols": "^1.2.0",
     "@nuxt/icon": "^1.4.10",
+    "@nuxt/ui": "^2.18.4",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@pinia/nuxt": "^0.5.4",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/motion": "^2.2.3",
+    "bcrypt": "^5.1.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
+    "material-symbols": "^0.22.2",
+    "mongoose": "^8.5.2",
+    "nodemailer": "^6.9.14",
     "nuxt": "^3.12.4",
+    "nuxt-mongoose": "^1.0.6",
     "nuxt-swiper": "^1.2.2",
     "vue": "latest"
   },
@@ -31,6 +40,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@iconify-json/mdi": "^1.2.0",
     "@vueuse/core": "^11.0.1",
     "@vueuse/nuxt": "^11.0.1"
   }
