--- a/package.json
+++ b/package.json
@@ -16,19 +16,27 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@pinia/nuxt": "^0.5.4",
+    "@stripe/stripe-js": "^4.4.0",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/motion": "^2.2.3",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "material-symbols": "^0.22.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.5.2",
+    "node-telegram-bot-api": "^0.66.0",
     "nodemailer": "^6.9.14",
-    "nuxt": "^3.12.3",
+    "nuxt": "^3.12.4",
     "nuxt-mongoose": "^1.0.6",
+    "nuxt-stripe-module": "^3.2.0",
     "nuxt-swiper": "^1.2.2",
+    "sharp": "^0.33.5",
+    "stripe": "^16.10.0",
+    "telegraf": "^4.16.3",
     "vue": "latest"
   },
   "overrides": {
@@ -40,8 +48,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@iconify-json/material-symbols-light": "^1.2.1",
     "@iconify-json/mdi": "^1.2.0",
     "@vueuse/core": "^11.0.1",
-    "@vueuse/nuxt": "^11.0.1"
+    "@vueuse/nuxt": "^11.0.1",
+    "puppeteer": "^23.3.0"
   }
 }
