--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@iconify-json/mdi": "^1.2.0",
     "@vueuse/core": "^11.0.1",
     "@vueuse/nuxt": "^11.0.1",
-    "puppeteer": "^23.3.0"
+    "puppeteer": "^23.3.0",
+    "unplugin-icons": "^0.19.3"
   }
 }
