--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sharp": "^0.33.5",
     "stripe": "^16.10.0",
     "telegraf": "^4.16.3",
+    "twilio": "^5.3.0",
     "vue": "latest"
   },
   "overrides": {
