--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@nuxt/icon": "^1.4.10",
     "@nuxt/ui": "^2.18.4",
     "@nuxtjs/google-fonts": "^3.2.0",
+    "@nuxtjs/robots": "^4.1.7",
+    "@nuxtjs/sitemap": "^6.0.1",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@pinia/nuxt": "^0.5.4",
     "@stripe/stripe-js": "^4.4.0",
