--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@nuxtjs/sitemap": "^6.0.1",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@pinia/nuxt": "^0.5.4",
+    "@prisma/nuxt": "^0.0.35",
     "@stripe/stripe-js": "^4.4.0",
+    "@supabase/supabase-js": "^2.45.4",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/motion": "^2.2.3",
@@ -52,8 +54,10 @@
   "devDependencies": {
     "@iconify-json/material-symbols-light": "^1.2.1",
     "@iconify-json/mdi": "^1.2.0",
+    "@prisma/client": "^5.19.1",
     "@vueuse/core": "^11.0.1",
     "@vueuse/nuxt": "^11.0.1",
+    "prisma": "^5.19.1",
     "puppeteer": "^23.3.0",
     "unplugin-icons": "^0.19.3"
   }
