--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/motion": "^2.2.3",
+    "@vueuse/core": "^11.0.3",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "date-fns": "^3.6.0",
