--- a/package.json
+++ b/package.json
@@ -34,15 +34,12 @@
     "moment": "^2.30.1",
     "mongoose": "^8.5.2",
     "nodemailer": "^6.9.14",
-    "nuxt": "^3.12.4",
+    "nuxt": "latest",
     "nuxt-protected-mailto": "^0.0.12",
     "nuxt-stripe-module": "^3.2.0",
-    "nuxt-swiper": "^1.0.1",
+    "nuxt-swiper": "latest",
     "sharp": "^0.33.5",
     "stripe": "^16.10.0",
-    "swiper": "^11.1.14",
-    "telegraf": "^4.16.3",
-    "twilio": "^5.3.0",
     "vue": "latest"
   },
   "overrides": {
