--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
   "dependencies": {
     "@iconify-json/material-symbols": "^1.2.0",
     "@nuxt/icon": "^1.4.10",
+    "@nuxt/kit": "^3.17.6",
     "@nuxt/ui": "^2.18.4",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/robots": "^4.1.7",
     "@nuxtjs/sitemap": "^6.0.1",
-    "@nuxtjs/tailwindcss": "^6.12.1",
     "@pinia/nuxt": "^0.5.4",
-    "@prisma/nuxt": "^0.0.35",
+    "@prisma/nuxt": "^0.3.0",
     "@stripe/stripe-js": "^4.4.0",
     "@supabase/supabase-js": "^2.45.4",
+    "@tailwindcss/postcss": "^4.1.11",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/core": "^11.0.3",
@@ -32,15 +33,14 @@
     "jsonwebtoken": "^9.0.2",
     "material-symbols": "^0.22.2",
     "moment": "^2.30.1",
-    "mongoose": "^8.5.2",
-    "nodemailer": "^6.9.14",
-    "nuxt": "latest",
+    "nuxt": "3.15.4",
     "nuxt-protected-mailto": "^0.0.12",
     "nuxt-stripe-module": "^3.2.0",
-    "nuxt-swiper": "latest",
-    "sharp": "^0.33.5",
+    "nuxt-swiper": "^2.0.1",
+    "puppeteer": "^24.23.0",
+    "sharp": "^0.34.4",
     "stripe": "^16.10.0",
-    "universal-cookie": "^7.2.0",
+    "universal-cookie": "^7.2.2",
     "vue": "latest"
   },
   "overrides": {
@@ -52,11 +52,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@iconify-json/ic": "^1.2.2",
     "@iconify-json/material-symbols-light": "^1.2.1",
     "@iconify-json/mdi": "^1.2.0",
-    "@prisma/client": "^5.21.1",
+    "@prisma/client": "^6.11.1",
     "@vueuse/nuxt": "^11.0.3",
-    "puppeteer": "^23.3.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3",
     "unplugin-icons": "^0.19.3"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.5"
   }
 }
